# test-integral

./: stack.yaml  test-integral.cabal
app/: Main.hs
