name:                test-integral
version:             0.1.0
description:         Test numerical methods for calculating integrals
homepage:            https://github.com/miguel-negrao
license:             BSD3
license-file:        LICENSE
author:              Miguel Negrão
maintainer:          miguel.negrao@friendlyvirus.org
build-type:          Simple
cabal-version:       >=1.10

executable test-integral
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5
                    , dunai
                    , bearriver
                    , transformers

  ghc-options:      -Wall -Wno-name-shadowing -Wno-unused-do-bind -Wno-orphans 
